feat: choose multi-file export output
